--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,5 @@
 extends layout
 
 block content
-  h1 #{title}
-  h1 Welcome to #{title}
-  p Hey this is my First express website
+  h1= title
+  p Welcome to #{title}
