--- a/public/home/style.css
+++ b/public/home/style.css
@@ -1,42 +1,7 @@
 /* Style the navigation bar */
-* {
+body {
     margin: 0;
     padding: 0;
-}
-
-.navbar {
-    background-color: #333;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 2rem;
-}
-
-.navbar a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.navbar a:hover {
-    background-color: #111;
-}
-
-/* Style the logo */
-.nav-logo {
-    height: 3rem;
-}
-
-/* Style the navigation links */
-.nav-links {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.nav-links li {
-    margin-left: 1rem;
 }
 
 /* Style the content */
@@ -154,7 +119,7 @@ ul ul {
     filter: brightness(40%);
 
     /* Full height */
-    height: 100%;
+    height: 40cm;
 
     /* Center and scale the image nicely */
     background-position: center;
